fixed some  spacing

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 /* Self Summary */
 .self-card {
     width: 75%;
-    height: 360px;
+    height: 48vh;
     border-radius: 30px;
     background: #e0e0e0;
     box-shadow: 10px 7px 7px rgb(25, 25, 25),
@@ -247,14 +247,15 @@ nav ul li a:hover {
 
 /* Project Section */
 .project-content{
-    margin-left: 10%;
+    margin-left: 17%;
     margin-bottom: 9%;
+    height: 100%;
 }
 .project {
     --font-color: #323232;
     --bg-color: #e0e0e0;
-    width: 80%;
-    height: 95vh;
+    width: 75%;
+    height: 100%;
     border-radius: 20px;
     background: rgba(16, 86, 82, .5);
     box-shadow: -9px 9px 18px #5a5a5a,
@@ -275,32 +276,41 @@ nav ul li a:hover {
   }
   
   .project__img {
-    width: 100%;
-    max-height: 72%;
-    object-fit: cover;
+    width: 100%; 
+    height: 100%;
     border-radius: 20px 20px 0 0;
     background-color: aliceblue;
+    object-fit: cover; 
 }
 
-  .project__img_tic{
+.project__img video {
+    width: 100%;
+    height: 90vh;
+    object-fit: cover;
+    object-position: center bottom;
+}
+
+.project__img-container {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    overflow: hidden; 
     border-radius: 20px 20px 0 0;
-    background-color:aliceblue;
-    object-position: center bottom
-  }
+}
+
+
   
   .card__descr-wrapper {
     display: grid;
+    width: 100%;
+    padding: 20px;
   }
   
   .project__title {
     color: var(--font-color);
     text-align: center;
-    margin-bottom: 2%; /* Adjust as needed */
+    margin-bottom: 2%; 
     font-weight: 900;
-    font-size: 2vw; /* Set font size as 3% of viewport width */
+    font-size: 2vw; 
     margin-top: 2%;
 }
   
@@ -329,7 +339,7 @@ nav ul li a:hover {
     font-weight: 600;
     font-size: 15px;
     text-decoration: none;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
   }
   
   .card__links .link:hover {
@@ -349,13 +359,13 @@ nav ul li a:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center; /* Horizontally center the element */
+    justify-content: center; 
     background-color: #e0e0e0;
     border-radius: 8px;
     box-shadow: 0px 0px 10px -3px #111;
     margin-top: 3%;
-    margin-left: 5%; /* Auto margin for left and right */
-    margin-right: auto; /* Auto margin for left and right */
+    margin-left: 5%; 
+    margin-right: auto; 
     margin-bottom: 6%;
     transition: transform 0.3s ease;
 }
@@ -398,7 +408,7 @@ nav ul li a:hover {
     align-items: center; /* Vertically center */
     justify-content: center; /* Horizontally center */
     font-family: 'Nunito', sans-serif;
-    margin-left: 5%;
+    margin-left: 10%;
     margin-top: 5%;
     margin-bottom: 5%;
 
@@ -406,7 +416,7 @@ nav ul li a:hover {
 
 .school-container {
     position: relative;
-    width: 90%;
+    width: 80%;
     height: 400px;
     margin-top: 50px;
   }
@@ -414,7 +424,6 @@ nav ul li a:hover {
   
   .education-card {
     position: relative;
-    width: 90%;
     height: 400px;
     background:rgba(16, 86, 82, .5);
     border-radius: 8px;
